minor name bug fix in server and basic ui design in client
