# server/routes.js
@@ -8,7 +8,7 @@ module.exports = (app) => {
   // Get all Capsules
   app.get('/capsules', validator, spaceController.getAllCapsules);
 
-  // Get details of a launch pad
+  // Get details of a landing pad
   app.get('/landing-pads', validator, spaceController.getLandingPadDetails);
 
 };
